Fixed maxResults, added css styles for video grid spacing

--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ header {
     line-height: 90px;
     white-space: nowrap;
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
     margin-top: 1rem;
 }
 
@@ -103,8 +103,8 @@ ol {
 }
 
 #results li {
-    width: 31%;
-    margin-right: 1.5%;
+    width: 33.3%;
+    padding: 1rem;
     display: inline-block;
     margin-bottom: 1.25rem;
 }
@@ -115,4 +115,5 @@ ol {
 
 #results h3 {
     font-weight: 300;
+    padding-top: .5rem;
 }
